--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+       "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2"
+    "request": "2.81.0"
   }
 }
